
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ data; } ;
typedef TYPE_1__* StringInfo ;


 int memcpy (scalar_t__,char const*,int) ;

__attribute__((used)) static void
copyToBuffer(StringInfo buffer, int offset, const char *data, int len)
{
 memcpy(buffer->data + offset, data, len);
}
